--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <logback.version>1.2.11</logback.version>
-        <slf4j.version>2.0.0</slf4j.version>
+        <logback.version>1.3.5</logback.version>
+        <slf4j.version>2.0.4</slf4j.version>
     </properties>
 
     <build>
@@ -33,8 +33,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>14</source>
-                    <target>14</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
         </plugins>
