--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <!-- Logging -->
         <logback.version>1.2.11</logback.version>
+        <slf4j.version>2.0.4</slf4j.version>
     </properties>
 
     <build>
