--- a/pom.xml
+++ b/pom.xml
@@ -220,7 +220,7 @@
 
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
+            <artifactId>spring-webmvc</artifactId>
         </dependency>
 
         <!--Test-->
@@ -250,7 +250,7 @@
                 <dependency>
                     <groupId>org.hsqldb</groupId>
                     <artifactId>hsqldb</artifactId>
-                    <version>2.7.2</version>
+                    <version>2.3.4</version>
                 </dependency>
             </dependencies>
         </profile>
